--- a/src/layouts/user/Header/styles.scss
+++ b/src/layouts/user/Header/styles.scss
@@ -45,17 +45,17 @@
 }
 
 .mobile-menu {
-    position: fixed;
-    top: 0;
-    right: -100%;
-    width: 50%;
-    height: 100%;
-    background-color: $color_second;
+    // position: fixed;
+    // top: 0;
+    // right: -100%;
+    // width: 50%;
+    // height: 100%;
+    // background-color: $color_second;
     z-index: 9999;
     transition: right 0.3s ease;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    font-weight: bold;
 }
 
 .mobile-menu.open {
