fix ui, display products

--- a/src/components/user/profile/UserSideBar/style.scss
+++ b/src/components/user/profile/UserSideBar/style.scss
@@ -16,7 +16,7 @@
                     text-decoration: none;
                     &.active {
                         border-radius: 0 10px 10px 0;
-                        background-color: rgba(172, 190, 235, 0.5);
+                        background-color: rgb(207, 210, 219);
                     }
                     .icon {
                         margin-right: 10px;
