--- a/src/layouts/admin/SideBar/style.scss
+++ b/src/layouts/admin/SideBar/style.scss
@@ -1,22 +1,14 @@
 @import "/src/styles/root.scss";
 .sidebar {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     height: 100vh;
-    width: 250px;
+    max-width: 250px;
+    overflow-x: scroll;
     transition: all 0.3s ease;
-    overflow: hidden;
     background-color: $color_global;
     color: #fff;
-
-    &.open {
-        width: 250px;
-    }
-
-    &.closed {
-        width: 80px;
-    }
 
     .sidebar-header {
         padding: 20px;
@@ -53,20 +45,9 @@
                     }
                     .text {
                         flex: 1;
-                        &.hidden-xs {
-                            display: none;
-                        }
                     }
                 }
             }
         }
-    }
-
-    .sidebar-footer {
-        padding: 20px;
-        text-align: center;
-        color: #000;
-        background-color: $color-white;
-        opacity: 0.8;
     }
 }
